# kubernetes-lab

./: .gitignore  .gitignore.backup  .gitleaks.toml  .sops.yaml  02-storage-test-snapshots.yaml  03-restic-garage-smoketest.yaml  03b-awscli-garage-endpoint-test.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  authentik-values.yaml  calibre-migrate-pod.yaml  ceph-cross-test.yaml  cephfs-test-pod.yaml  cephfs-test-pvc.yaml  cluster-thermals.sh  csi-cephfsplugin.before.yaml  kubeconfig-working.yaml  kubeconfig-working.yaml.bak.20251230-164846  kubeconfig-working.yaml.bak.20260120-141821  metallb-config.yaml  nfs-qnap-media-test.yaml  renovate.json  riven-backend-debug.yaml  riven-debug-worker2.yaml  riven-debug.yaml  riven-frontend-debug.yaml  riven-vol-debug.yaml  seerr-migrate.yaml  sops-private.asc  wiki-js-migrate-pod.yaml
.githooks/: pre-commit
ansible/: README.md
docker/beam/: Dockerfile  README.md  pyproject.toml
docker/beam/e2e/: e2e_beam.py
docker/beam/src/beam/: config.py  main.py  protocol.py  proxy.py  rooms.py  streams.py  turncreds.py
docker/beam/src/beam/static/: beam.css  landing.html  receiver.html  receiver.js  sender.html  sender.js  webrtc.js
docker/beam/tests/: test_proxy.py  test_proxy_integration.py  test_rooms.py  test_streams.py  test_transport.py  test_turncreds.py
docs/: backup-architecture.md  backup-recovery.md  backup-system-wiki.md  ceph-scrub-queue-cron.md  ceph-tentacle-upgrade-plan.md  ceph-tuning-2026-05-07.md  cnpg-disaster-recovery.md  dr-gameday-runbook.md  excalidash-sso-runbook.md  external-access-operating-map.md  (+21 more)
(+1367 files in other folders)
